# photo-recipe

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_preferences_favorites.py
docs/screenshots/: README.md
src/recipe/: __init__.py  config.py
src/recipe/analytics/: stats.py
src/recipe/api/: __init__.py  main.py
src/recipe/bot/: keyboards.py  main.py  middleware.py  presentation.py
src/recipe/bot/handlers/: favorites.py  photo.py  settings.py  start.py  stats.py  url.py
src/recipe/cache/: __init__.py  redis_cache.py
src/recipe/db/: crud.py  models.py  session.py
src/recipe/llm/: generator.py  json_utils.py
src/recipe/schemas/: __init__.py  preferences.py  recipe.py
src/recipe/scraper/: __init__.py  playwright_scraper.py
src/recipe/vision/: __init__.py  analyzer.py
tests/: test_api.py  test_cache.py  test_preferences.py  test_presentation.py  test_schemas.py  test_scraper.py  test_vision.py
