[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-recipe"
version = "0.1.0"
description = "AI recipe generator from fridge photos and recipe URLs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7",
    "google-genai>=1.0",
    "openai>=1.40",
    "playwright>=1.45",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "redis>=5.0",
    "pandas>=2.2",
    "httpx>=0.27",
    "Pillow>=10",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
